k8s/overlays/azure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-ingress
  namespace: atlantis
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: atlantis.shared-svc.k8s.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atlantis
            port:
              number: 80
